# maya-pipeline-tools

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: developer-guide.md  user-guide.md  中文字符与路径处理总结.md
src/: AnimExporter.cpp  AnimExporter.h  BatchExporterCmd.cpp  BatchExporterCmd.h  BatchExporterUI.cpp  BatchExporterUI.h  ExportLogger.cpp  ExportLogger.h  FileAnalyzer.cpp  FileAnalyzer.h  NamingUtils.cpp  NamingUtils.h  PluginLog.cpp  PluginLog.h  RefCheckerCmd.cpp  RefCheckerCmd.h  RefCheckerUI.cpp  RefCheckerUI.h  SafeLoaderCmd.cpp  SafeLoaderCmd.h  SafeLoaderUI.cpp  SafeLoaderUI.h  SafeOpenCmd.cpp  SafeOpenCmd.h  SceneScanner.cpp  SceneScanner.h  pluginMain.cpp
